0.0.7
	
0.0.6
	* lloyd fix regression in 0.0.5 that would cause bogus sizes to
	        be generated for large input files
	
0.0.5
        * lloyd implement heuristic determination of a nice balanced
                dictionary size providing near optimal compression at
                reasonably low memory usage - elzma_get_dict_size()
        
0.0.4
        * lloyd fix typo in extern "C" wrappers for correct usage from
                 c++ libraries  

0.0.3
        * lloyd implement source file deletion and the --keep flag
        * lloyd add support for lzip file format
        * lloyd add a test binary which tests ability to decompress
                output generated by lzip or lzma and handling of
                corrupt input
        
0.0.2
        * lloyd fix dynamic libraries on osx 10.4
        * lloyd README updated with supported platforms and more accurate
                information on the upcoming xz format.

0.0.1
        * lloyd initial complete easylzma library implementation with
                simple command line tools mainly intended for testing of
                the library